# nebgov

./: .gitignore  .scout.toml  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  JWT_REFRESH_TOKEN_SUMMARY.md  README.md  SECURITY.md  TEST_COVERAGE_SUMMARY.md  brand.md  codecov.yml  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_request.yml  feature_request.yml
.github/workflows/: backend.yml  release.yml  rust.yml  sdk.yml
app/: .env.local.example  jest.config.js  jest.setup.js  middleware.ts  package.json  playwright.config.ts  tsconfig.tsbuildinfo
app/e2e/: proposal-lifecycle.spec.ts
app/src/: i18n.ts
backend/: .env.example  AUTH_IMPLEMENTATION.md  MIGRATION_GUIDE.md  QUICK_START.md  jest.config.js  package-lock.json  package.json
backend/src/: index.ts
contracts/governor/: Cargo.toml
contracts/governor-factory/: Cargo.toml
contracts/token-votes/: Cargo.toml
contracts/token-votes-wrapper/: Cargo.toml
contracts/token-votes-wrapper/src/: lib.rs
contracts/token-votes-wrapper/test_snapshots/tests/: test_delegate_moves_voting_power.1.json  test_deposit_and_withdraw.1.json  test_withdraw_locked.1.json
docs/: SECURITY_RUNBOOK.md  architecture.md  deployments.md  local-development.md  parameter-tuning.md  parameter-updates.md  permissions.md  proposal-states.md  quick-start.md  treasury.md  tutorial.md
docs/adr/: README.md  adr-007-wrapper-withdrawal-locking.md  (+1 more)
fuzz/: Cargo.toml
scripts/: deploy-testnet.sh  update-deployments.sh
sdk/: jest.config.js  package.json
(+1402 files in other folders)
