[package]
name = "sorogov-token-votes-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[features]
testutils = ["soroban-sdk/testutils"]

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
